crates/ferromark/src/renderer/html/tests/snapshots/ferromark__renderer__html__tests__blocks__heading_permalinks_unicode_and_duplicates.snap
---
source: crates/ferromark/src/renderer/html/tests/blocks.rs
expression: html
---
<h2 id="はじめに">はじめに<a class="header-anchor" href="#はじめに" aria-label="Permalink to &quot;はじめに&quot;">#</a></h2>
<h2 id="はじめに-1">はじめに<a class="header-anchor" href="#はじめに-1" aria-label="Permalink to &quot;はじめに&quot;">#</a></h2>
