crates/ferromark/src/renderer/html/tests/snapshots/ferromark__renderer__html__tests__blocks__render_block_quote_with_inline.snap
---
source: crates/ferromark/src/renderer/html/tests/blocks.rs
expression: html
---
<blockquote>
<p><strong>Note:</strong> This is important</p>
</blockquote>
