crates/ferromark/src/renderer/html/tests/snapshots/ferromark__renderer__html__tests__blocks__render_github_style_important_callout.snap
---
source: crates/ferromark/src/renderer/html/tests/blocks.rs
expression: html
---
<blockquote class="ox-callout ox-callout--important">
<p class="ox-callout-title">Important</p>
<p>This is important.</p>
</blockquote>
